# watchyflow

./: .gitignore  LICENSE  README.md
Watchy-JT/: Battery.cpp  Battery.h  Calendar.cpp  Calendar.h  CalendarFace.cpp  Display.cpp  Layout.cpp  Layout.h  Seven_Segment10pt7b.h  Watchy-JT.ino  Watchy.cpp  Watchy.h  Watchy32KRTC.cpp  Watchy32KRTC.h  WatchyFace.cpp  WatchyFace.h  Watchy_7_SEG.cpp  bma423.c  config.h  deploy.sh  icons.h  settings.h.example
Watchy2/: Battery.h  Calendar.cpp  Calendar.h  CalendarFace.cpp  CalendarFace.h  Display.cpp  Display.h  Layout.cpp  Layout.h  Watchy.cpp  Watchy.h  Watchy2.ino  bma4.c  config.h  deploy.sh  format.sh  icons.h  settings.h.example  sketch.yaml
WatchyFlow/: Arena.cpp  Arena.h  Battery.cpp  Battery.h  Calendar.cpp  Calendar.h  CalendarFace.cpp  CalendarFace.h  DSEG7_Classic_Bold_25.h  Layout.cpp  Layout.h  MenuApp.cpp  MenuApp.h  Watchy.cpp  Watchy.h  WatchyFlow.ino  Weather.cpp  Weather.h  deploy.sh  format.sh  icons.h  library.properties  settings.h.example  sketch-v3.yaml  sketch.yaml
WatchyFlow/src/Apps/About/: About.cpp  About.h
WatchyFlow/src/Apps/Alerts/: AlertsApp.cpp  AlertsApp.h
WatchyFlow/src/Apps/AltApp/: AltApp.cpp  AltApp.h
WatchyFlow/src/Elements/: Battery.cpp  Battery.h  Buttons.cpp  Buttons.h  Weather.cpp  Weather.h  icons.h
WatchyFlow/src/Layout/: Arena.h  Layout.cpp  Layout.h
WatchyFlow/src/Watchy/: BLE.cpp  Display.cpp  Settings.h  Watchy.cpp  Watchy.h  WatchyApp.h
src/: Watchy_7_SEG.h
watchy_server/: cals.json.example  main.py  pyproject.toml  test_calendar_processor.py
(+17 files in other folders)
